fixed spacing for navbar

--- a/src/components/elements/GrillberNav.css
+++ b/src/components/elements/GrillberNav.css
@@ -11,6 +11,7 @@ nav .brand-logo {
     color: #fd9727;
     display: block;
     padding-left: 60px;
+    padding-top: 40px;
     font-size: 1.8rem;
     white-space: nowrap;
 }
@@ -18,7 +19,8 @@ nav .brand-logo {
 nav i.material-icons {
     display: block;
     font-size: 1.8rem;
-    padding-right: 20px;
+    padding-right: 60px;
+    padding-top: 40px;
     height: 56px;
     line-height: 56px;
     color: #fd9727;
